<?xml version="1.0" encoding="utf-8"?>
<!--
    관심지역 설정 화면
    서울 부산 대구 인천 광주 대전 울산 세종 경기 강원 경상도 충청도 전라도 제주도
    중 하나 또는 다수를 선택하여 Home_Fragment에 등록한다.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Home.InterestPopupActivity">

    <!-- 타이틀 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 타이틀 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:background="#ff7a00"
            android:text="@string/home_point_title"
            android:textSize="20sp"
            android:textColor="#fff"/>

    </LinearLayout>
    
    <!-- 관심 지역 리스트 -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TableRow
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/interest_seoul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/seoul"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_busan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/busan"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_daegu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/daegu"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_incheon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/incheon"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/interest_gwangju"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/gwangju"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_daejeon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/daegeon"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_ulsan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/ulsan"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_sejong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/sejong"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/interest_gyeonggi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/gyeonggi"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_gangwon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/gangwon"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_chungcheong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/chungcheong"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_jeonla"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/jeonla"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/interest_gyeongsang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/gyeongsang"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/interest_jeju"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/interest_point_table_border"
                android:onClick="onClick"
                android:text="@string/jeju"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#ff7a00"
                tools:ignore="ButtonStyle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

    <!-- 구분선-->
    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <!-- 확인 / 취소 레이아웃 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 확인 버튼 -->
        <Button
            android:id="@+id/pointOk"
            android:text="@string/home_point_OK"
            android:textSize="15sp"
            android:textColor="#ff7a00"
            android:padding="16dp"
            android:gravity="center"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="53dp"
            tools:ignore="ButtonStyle" />

        <!-- 취소 버튼 -->
        <Button
            android:id="@+id/pointCancel"
            android:text="@string/home_point_CANCEL"
            android:textSize="15sp"
            android:textColor="#ff7a00"
            android:padding="16dp"
            android:gravity="center"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="53dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>