<?xml version="1.0" encoding="utf-8"?>
<!--
    홈 화면 이벤트 리사이클러뷰 - 클릭 시 나오는 이벤트 화면

    이벤트 이미지와 링크를 출력한다
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Home.EventActivity">


    <!-- 타이틀 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 타이틀 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:background="#ff7a00"
            android:text="@string/home_event_popup"
            android:textSize="20sp"
            android:textColor="#fff"/>

    </LinearLayout>

    <!-- 이벤트 화면 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:orientation="vertical">

        <!-- 이벤트 팜플릿(이미지) -->
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/test2"
            android:layout_gravity="center"
            android:contentDescription="@string/home_event_image_description" />

        <!-- 이벤트 페이지 링크 -->
        <TextView
            android:id="@+id/eventLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_event_link"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

    </LinearLayout>


    <!-- 구분선-->
    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <!-- 뒤로가기 레이아웃 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 뒤로가기 -->
        <Button
            android:id="@+id/eventOk"
            android:text="@string/home_event_OK"
            android:textSize="15sp"
            android:textColor="#ff7a00"
            android:padding="16dp"
            android:gravity="center"
            android:background="#00000000"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="53dp"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


</LinearLayout>